--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14">
 		<attributes>
-			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
@@ -36,23 +35,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/byte-buddy-1.10.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/classmate-1.5.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/dom4j-2.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/FastInfoset-1.2.15.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/hibernate-commons-annotations-5.1.2.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/hibernate-core-5.4.23.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/istack-commons-runtime-3.0.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/jandex-2.1.3.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/javassist-3.24.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/javax.activation-api-1.2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/javax.persistence-api-2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/jaxb-api-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/jaxb-runtime-2.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/jboss-logging-3.4.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/jboss-transaction-api_1.2_spec-1.1.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/stax-ex-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/luist/git/Pelubosque-Caratulas/WebContent/WEB-INF/lib/txw2-2.3.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JPA-Hibernite"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
